--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "turbo dev --parallel",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo lint && manypkg check",
+    "lint:fix": "turbo lint -- --fix && manypkg fix",
     "type-check": "turbo type-check"
   },
   "dependencies": {
@@ -18,9 +19,21 @@
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.28.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-turbo": "^0.0.4",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "eslint-plugin-sort-keys": "2.3.5",
+    "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "turbo": "^1.5.5",
     "typescript": "^4.9.3"
+  },
+  "devDependencies": {
+    "@types/eslint": "^8.4.10"
   }
 }
