--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,13 @@
       "cache": false
     },
     "build": {
+      "env": [
+        "NODE_ENV",
+        "VERCEL_URL",
+        "PORT",
+        "DISCORD_CLIENT_ID",
+        "DISCORD_CLIENT_SECRET"
+      ],
       "dependsOn": ["^build", "^db-generate"],
       "outputs": [".next/**", ".expo/**"]
     },
