chore: add commitlint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,10 @@
     "incremental": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": [".eslintrc.cjs"]
+  "include": [
+    ".eslintrc.cjs",
+    "commitlint.config.js",
+    ".prettierrc.cjs",
+    "packages/config/tailwind/*.js"
+  ]
 }
