--- a/package.json
+++ b/package.json
@@ -12,28 +12,39 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo lint && manypkg check",
     "lint:fix": "turbo lint -- --fix && manypkg fix",
-    "type-check": "turbo type-check"
+    "type-check": "turbo type-check",
+    "prepare": "husky install"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@commitlint/config-conventional": "^17.3.0",
     "@manypkg/cli": "^0.19.2",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "commitlint": "^17.3.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-turbo": "^0.0.4",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "eslint-plugin-sort-keys": "2.3.5",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "lint-staged": "^13.0.4",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "turbo": "^1.5.5",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "husky": "^8.0.0"
   },
-  "devDependencies": {
-    "@types/eslint": "^8.4.10"
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --max-warnings=0",
+      "prettier --write"
+    ],
+    "src/**/*.{json,css,scss,md}": [
+      "prettier --write"
+    ]
   }
 }
